Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40539

QQuick images attempt to reload while shutting down, causing a fatal error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.2
    • 5.3.1
    • Quick: Other
    • None
    • CentOS 7 x86_64
    • 8076b428d2e6b8de8bacf556b8dccb5bbd99e0ac

      qFatal error occurs up when application is shutting down. When a QCoreApplication is destructing, a screen change occurs[1] causing QQuickImageBase to reload images ultimately resulting in "QPixmap: Must construct a QGuiApplication before a QPixmap"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            nocnokneo Taylor Braun-Jones
            nocnokneo Taylor Braun-Jones
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes